refix the overflow issue with the landing snippet

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -12,7 +12,6 @@
   justify-content: center;
   height: 85vh;
   margin: 0 5%;
-  overflow-x: hidden;
 }
 
 /* #scroll-down {
